--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -8,6 +8,11 @@ filter:
 
 
 build:
+  nodes:
+    analysis:
+      tests:
+        override:
+          - php-scrutinizer-run
   environment:
     php:
       version: '7.1'
